# bt_streaming_ws

./: .gitignore
src/bt_streaming/: CMakeLists.txt  README.md  bt_streaming.cpp  bt_streaming_node.cpp  bt_subscriber.cpp  bt_subscriber_node.cpp  package.xml
src/bt_streaming/LibAzureKinect/: .gitignore
src/bt_streaming/LibAzureKinect/KinectBodyTracker/: CMakeLists.txt  KinectBodyTracker.cpp  KinectBodyTracker.h  example.cpp
src/bt_streaming/LibAzureKinect/sample_helper_libs/window_controller_3d/: CMakeLists.txt
src/bt_streaming/LibAzureKinect/simple_3d_viewer/: CMakeLists.txt
src/bt_streaming/LibAzureKinect/simple_skelton_streamer/: CMakeLists.txt  README.md
src/bt_streaming/LibAzureKinect/simple_skelton_streamer/include/simple_skelton_streamer/: camera_interface.h  skeleton_processor.h
src/bt_streaming/LibAzureKinect/simple_skelton_streamer/src/: camera_interface.cpp  main.cpp  skeleton_processor.cpp
src/bt_streaming/config/: body_tracking_params.yaml  subscriber_params.yaml
src/bt_streaming/include/bt_streaming/: bt_streaming.hpp  bt_subscriber.hpp
src/bt_streaming/launch/: body_tracking.launch.py  bt_subscriber.launch.py
